k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: markdriller-service
  namespace: markdriller
  labels:
    app.kubernetes.io/name: markdriller
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5009
      targetPort: 5009
      protocol: TCP
  selector:
    app.kubernetes.io/name: markdriller
    app.kubernetes.io/component: api
